fix Suspense_ -> align-items: 'center'

--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -6,7 +6,7 @@
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     flex-direction: column;
     position: fixed;
     background: $dt-background;
